0.2.0 相对 0.1.0 的改动：
1、删除 AbstractGeneticAlgorithm 的 getBestFitnessList 和 getMeanFitnessList 方法。现在所有统计数据全部使用 DataCollector 获得，算法不再提供。
2、POM 文件中增加 maven-source-plugin 配置。